@@ -3,6 +3,10 @@
 	* gtk/Graphics/UI/Gtk/Display/Image.chs.pp: fix an #if test so that it
 	works correctly and is consistent with the other similar ones.
 
+	* tools/apiGen/CodeGen.hs, tools/apiGen/Marshal.hs: deal with the
+	_utf8 issue on win32. Generate code for {# call #}'s using the
+	appropriate #if's.
+
 2005-02-14 Duncan Coutts <duncan@coutts.uklinux.net>
 
 	* tools/apiGen/glib-sources.xml: add extra sources spec.
